deployment/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flutter-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flutter-web
  template:
    metadata:
      labels:
        app: flutter-web
    spec:
      containers:
        - name: flutter-web
          imagePullPolicy: Always
          image: ramsai987/flutter-frontend 
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: flutter-web-service
spec:
  selector:
    app: flutter-web
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      nodePort: 30007
  type: NodePort

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: flutter-web
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: flutter-web
#   template:
#     metadata:
#       labels:
#         app: flutter-web
#     spec:
#       containers:
#         - name: flutter-web
#           image: ramsai987/flutter-frontend
#           ports:
#             - containerPort: 9000
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: flutter-web-service
# spec:
#   selector:
#     app: flutter-web
#   ports:
#     - protocol: TCP
#       port: 9000
#       targetPort: 9000
#   type: ClusterIP
